test/frontend/fail/function_redefinition.osl
int f(float k) { return (int)k; }
int f(float k) { return 1; }
